--- a/cocktails/app.json
+++ b/cocktails/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "BabyApp",
-    "slug": "BabyApp",
+    "name": "cocktails",
+    "slug": "cocktails",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
